Add filters list to index.html and new comment to script.js and comments and filters class to style.css

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -37,6 +37,12 @@
 	</section>
 	<section id="portfolio">
 		<h2>Mes Projets</h2>
+		<ul class="filters">
+			<li>Tous</li>
+			<li>Objets</li>
+			<li>Appartements</li>
+			<li>Hôtels & restaurants</li>
+		</ul>
 		<div class="gallery"></div>
 	</section>
 	<section id="contact">
