Remove links and add buttons to filters list in index.html and style.css

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -39,16 +39,16 @@
 			<h2>Mes Projets</h2>
 			<ul class="filters">
 				<li>
-					<a href="#">Tous</a>
+					<button class="filter" autofocus>Tous</button>
 				</li>
 				<li>
-					<a href="#"">Objets</a>
+					<button class="filter">Objets</button>
 				</li>
 				<li>
-					<a href="#">Appartements</a>
+					<button class="filter">Appartements</button>
 				</li>
 				<li>
-					<a href="#">Hôtels & restaurants</a>
+					<button class="filter">Hôtels & restaurants</button>
 				</li>
 			</ul>
 			<div class="gallery"></div>
