Remove buttons from filters list and change it into block in index.html and add filtersGallery function with first name category from works route added to DOM in script.js

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -37,20 +37,7 @@
 		</section>
 		<section id="portfolio">
 			<h2>Mes Projets</h2>
-			<ul class="filters">
-				<li>
-					<button class="filter" autofocus>Tous</button>
-				</li>
-				<li>
-					<button class="filter">Objets</button>
-				</li>
-				<li>
-					<button class="filter">Appartements</button>
-				</li>
-				<li>
-					<button class="filter">Hôtels & restaurants</button>
-				</li>
-			</ul>
+			<div class="filters"></div>
 			<div class="gallery"></div>
 		</section>
 		<section id="contact">
