Add login form based on contact model to login.html and style.css

--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -26,7 +26,16 @@
 		</nav>
 	</header>
 	<main>
-		<section id="signIn">
+		<section id="logIn">
+			<h2>Log In</h2>
+			<form action="#" method="post">
+				<label for="email">E-mail</label>
+				<input type="email" name="email" id="email" class="formInput">
+				<label for="password">Mot de passe</label>
+				<input type="password" name="password" id="password" class="formInput">
+				<input type="submit" value="Se connecter">
+			</form>
+			<p class="passP">Mot de passe oublié</p>
 		</section>
 	</main>
 	<footer>
