--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -45,9 +45,9 @@
 			<p>Vous avez un projet ? Discutons-en !</p>
 			<form action="#" method="post">
 				<label for="name">Nom</label>
-				<input type="text" name="name" id="name" class="contactInput">
+				<input type="text" name="name" id="name" class="formInput">
 				<label for="email">E-mail</label>
-				<input type="email" name="email" id="email" class="contactInput">
+				<input type="email" name="email" id="email" class="formInput">
 				<label for="message">Message</label>
 				<textarea name="message" id="message" cols="30" rows="12"></textarea>
 				<input type="submit" value="Envoyer">
