Add activeNav class to login link in login.html and style.css and add all links to all pages

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -16,12 +16,20 @@
 		<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
 		<nav>
 			<ul>
-				<li>projets</li>
-				<li>contact</li>
+				<li>
+					<a href="#portfolio">projets</a>
+				</li>
+				<li>
+					<a href="#contact">contact</a>
+				</li>
 				<li>
 					<a href="./login.html">login</a>
 				</li>
-				<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
+				<li>
+					<a href="#">
+						<img src="./assets/icons/instagram.png" alt="Instagram">
+					</a>
+				</li>
 			</ul>
 		</nav>
 	</header>
@@ -57,7 +65,9 @@
 	<footer>
 		<nav>
 			<ul>
-				<li>Mentions Légales</li>
+				<li>
+					<a href="#">Mentions Légales</a>
+				</li>
 			</ul>
 		</nav>
 	</footer>
