--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -16,12 +16,20 @@
 		<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
 		<nav>
 			<ul>
-				<li>projets</li>
-				<li>contact</li>
 				<li>
-					<a href="./login.html">login</a>
+					<a href="./index.html#portfolio">projets</a>
 				</li>
-				<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
+				<li>
+					<a href="./index.html#contact">contact</a>
+				</li>
+				<li>
+					<a href="./login.html" class="activeNav">login</a>
+				</li>
+				<li>
+					<a href="#">
+						<img src="./assets/icons/instagram.png" alt="Instagram">
+					</a>
+				</li>
 			</ul>
 		</nav>
 	</header>
@@ -35,13 +43,17 @@
 				<input type="password" name="password" id="password" class="formInput">
 				<input type="submit" value="Se connecter">
 			</form>
-			<p class="passP">Mot de passe oublié</p>
+			<p class="passP">
+				<a href="#">Mot de passe oublié</a>
+			</p>
 		</section>
 	</main>
 	<footer>
 		<nav>
 			<ul>
-				<li>Mentions Légales</li>
+				<li>
+					<a href="#">Mentions Légales</a>
+				</li>
 			</ul>
 		</nav>
 	</footer>
