Set new id and class names in index.html, login.html and style.css

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -53,9 +53,9 @@
 			<p>Vous avez un projet ? Discutons-en !</p>
 			<form action="#" method="post">
 				<label for="name">Nom</label>
-				<input type="text" name="name" id="name" class="formInput">
+				<input type="text" name="name" id="name" class="details">
 				<label for="email">E-mail</label>
-				<input type="email" name="email" id="email" class="formInput">
+				<input type="email" name="email" id="email" class="details">
 				<label for="message">Message</label>
 				<textarea name="message" id="message" cols="30" rows="12"></textarea>
 				<input type="submit" value="Envoyer">
