--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -34,16 +34,16 @@
 		</nav>
 	</header>
 	<main>
-		<section id="logIn">
+		<section id="login">
 			<h2>Log In</h2>
 			<form action="#" method="post">
 				<label for="email">E-mail</label>
-				<input type="email" name="email" id="email" class="formInput">
+				<input type="email" name="email" id="email" class="details">
 				<label for="password">Mot de passe</label>
-				<input type="password" name="password" id="password" class="formInput">
+				<input type="password" name="password" id="password" class="details">
 				<input type="submit" value="Se connecter">
 			</form>
-			<p class="passP">
+			<p class="forgot">
 				<a href="#">Mot de passe oublié</a>
 			</p>
 		</section>
