Add new login button to header in index.html and style.css and add new script with addEventListener method in login.js and script.js

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -22,9 +22,12 @@
 				<li>
 					<a href="#contact">contact</a>
 				</li>
+				<!-- Bouton du lien vers la page login.html -->
 				<li>
 					<a href="./login.html">login</a>
 				</li>
+				<!-- Bouton "loginNav"
+					 <li id="loginNav">login</li> -->
 				<li>
 					<a href="#">
 						<img src="./assets/icons/instagram.png" alt="Instagram">
