Add loginForm id to login form in login.html and style.css and add new function for authentication in script.js and login.js

--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -36,7 +36,7 @@
 	<main>
 		<section id="login">
 			<h2>Log In</h2>
-			<form action="#" method="post">
+			<form action="#" method="post" id="loginForm">
 				<label for="email">E-mail</label>
 				<input type="email" name="email" id="email" class="details">
 				<label for="password">Mot de passe</label>
