Add projets div to index.html and add edit button in editMode function in login.js and style.css

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -52,7 +52,9 @@
 			</article>
 		</section>
 		<section id="portfolio">
-			<h2>Mes projets</h2>
+			<div id="projets">
+				<h2>Mes projets</h2>
+			</div>
 		</section>
 		<section id="contact">
 			<h2>Contact</h2>
