Update login button comment in index.html and refactor functions in script.js and login.js

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -29,7 +29,7 @@
 				<li>
 					<a href="./login.html">login</a>
 				</li>
-				<!-- Bouton "loginNav"
+				<!-- Bouton "login"
 					 <li id="loginNav">login</li> -->
 				<li>
 					<a href="#">
