--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -23,7 +23,7 @@
 					<a href="./index.html#contact">contact</a>
 				</li>
 				<li>
-					<a href="./login.html" class="activeNav">login</a>
+					<a href="./login.html" class="active-nav">login</a>
 				</li>
 				<li>
 					<a href="#">
@@ -36,7 +36,7 @@
 	<main>
 		<section id="login">
 			<h2>Log In</h2>
-			<form action="#" method="post" id="loginForm">
+			<form action="#" method="post" id="login-form">
 				<label for="email">E-mail</label>
 				<input type="email" name="email" id="email" class="details">
 				<label for="password">Mot de passe</label>
