--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -7,7 +7,7 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
-		<meta name="description" content="">
+		<meta name="description" content="Bienvenue sur le portfolio de Sophie Bluel, votre designer d'espace.">
 		<link rel="stylesheet" href="./assets/style.css">
 		<script type="module" src="./script.js"></script>
 	</head>
