--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -12,69 +12,84 @@
             integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
             crossorigin="anonymous" referrerpolicy="no-referrer">
 		<link rel="stylesheet" href="./assets/style.css">
-		<script type="module" src="./script.js"></script>
+		<script src="./script.js" defer></script>
 	</head>
 	<body>
-	<header>
-		<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
-		<nav>
-			<ul>
-				<li>
-					<a href="#portfolio">projets</a>
-				</li>
-				<li>
-					<a href="#contact">contact</a>
-				</li>
-				<li>
-					<a href="./login.html">login</a>
-				</li>
-				<li>
-					<a href="#">
-						<img src="./assets/icons/instagram.png" alt="Instagram">
-					</a>
-				</li>
-			</ul>
-		</nav>
-	</header>
-	<main>
-		<section id="introduction">
-			<figure>
-				<img src="./assets/images/sophie-bluel.png" alt="Photo de Sophie Bluel">
-			</figure>
-			<article>
-				<h2>Designer d'espace</h2>
-				<p>Je raconte votre histoire, je valorise vos idées. Je vous accompagne de la conception à la livraison finale du chantier.</p>
-				<p>Chaque projet sera étudié en commun, de façon à mettre en valeur les volumes, les matières et les couleurs dans le respect de l’esprit des lieux et le choix adapté des matériaux. Le suivi du chantier sera assuré dans le souci du détail, le respect du planning et du budget.</p>
-				<p>En cas de besoin, une équipe pluridisciplinaire peut-être constituée : architecte DPLG, décorateur(trice).</p>
-			</article>
-		</section>
-		<section id="portfolio">
-			<div id="projets">
-				<h2>Mes projets</h2>
-			</div>
-		</section>
-		<section id="contact">
-			<h2>Contact</h2>
-			<p>Vous avez un projet ? Discutons-en !</p>
-			<form action="#" method="post">
-				<label for="name">Nom</label>
-				<input type="text" name="name" id="name" class="details">
-				<label for="email">E-mail</label>
-				<input type="email" name="email" id="email" class="details">
-				<label for="message">Message</label>
-				<textarea name="message" id="message" cols="30" rows="12"></textarea>
-				<input type="submit" value="Envoyer">
-			</form>
-		</section>
-	</main>
-	<footer>
-		<nav>
-			<ul>
-				<li>
-					<a href="#">Mentions Légales</a>
-				</li>
-			</ul>
-		</nav>
-	</footer>
+		<aside class="edit-title hidden">
+			<i class="fa-regular fa-pen-to-square"></i>
+            <p>Mode édition</p>
+		</aside>
+		<header>
+			<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
+			<nav>
+				<ul>
+					<li>
+						<a href="#portfolio">projets</a>
+					</li>
+					<li>
+						<a href="#contact">contact</a>
+					</li>
+					<li>
+						<a href="./login.html">login</a>
+					</li>
+					<li>
+						<a href="#">
+							<img src="./assets/icons/instagram.png" alt="Instagram">
+						</a>
+					</li>
+				</ul>
+			</nav>
+		</header>
+		<main>
+			<section id="introduction">
+				<figure>
+					<img src="./assets/images/sophie-bluel.png" alt="Photo de Sophie Bluel">
+				</figure>
+				<article>
+					<h2>Designer d'espace</h2>
+					<p>Je raconte votre histoire, je valorise vos idées. Je vous accompagne de la conception à la livraison finale du chantier.</p>
+					<p>Chaque projet sera étudié en commun, de façon à mettre en valeur les volumes, les matières et les couleurs dans le respect de l’esprit des lieux et le choix adapté des matériaux. Le suivi du chantier sera assuré dans le souci du détail, le respect du planning et du budget.</p>
+					<p>En cas de besoin, une équipe pluridisciplinaire peut-être constituée : architecte DPLG, décorateur(trice).</p>
+				</article>
+			</section>
+			<section id="portfolio">
+				<div id="projets">
+					<h2>Mes projets</h2>
+					<button class="edit-btn hidden">
+						<i class="fa-regular fa-pen-to-square"></i>
+						modifier
+					</button>
+				</div>
+				<dialog>
+					<form method="dialog" id="modal1">
+						<i class="fa-solid fa-xmark"></i>
+						<h3>Galerie photo</h3>
+						<button id="add-photo" class="modal-main-btn">Ajouter une photo</button>
+					</form>
+				</dialog>
+			</section>
+			<section id="contact">
+				<h2>Contact</h2>
+				<p>Vous avez un projet ? Discutons-en !</p>
+				<form action="#" method="post">
+					<label for="name">Nom</label>
+					<input type="text" name="name" id="name" class="details">
+					<label for="email">E-mail</label>
+					<input type="email" name="email" id="email" class="details">
+					<label for="message">Message</label>
+					<textarea name="message" id="message" cols="30" rows="12"></textarea>
+					<input type="submit" value="Envoyer">
+				</form>
+			</section>
+		</main>
+		<footer>
+			<nav>
+				<ul>
+					<li>
+						<a href="#">Mentions Légales</a>
+					</li>
+				</ul>
+			</nav>
+		</footer>
 	</body>
 </html>
