Add button tag with xmark class to xmark icon in index.html and style.css

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -62,7 +62,9 @@
 				</div>
 				<dialog>
 					<form method="dialog" id="modal1">
-						<i class="fa-solid fa-xmark"></i>
+						<button class="xmark">
+							<i class="fa-solid fa-xmark"></i>
+						</button>
 						<h3>Galerie photo</h3>
 						<button id="add-photo" class="modal-main-btn">Ajouter une photo</button>
 					</form>
