Add modal2 form with hidden class to modal in index.html

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -68,6 +68,13 @@
 						<h3>Galerie photo</h3>
 						<button id="add-photo" class="modal-main-btn">Ajouter une photo</button>
 					</form>
+					<form method="dialog" id="modal2" class="hidden">
+						<button class="xmark">
+							<i class="fa-solid fa-xmark"></i>
+						</button>
+						<h3>Ajout photo</h3>
+						<button id="validate" class="modal-main-btn">Valider</button>
+					</form>
 				</dialog>
 			</section>
 			<section id="contact">
