Add log-nav id to login link in index.html and login.html and add addEventListener method in editMode function to logout in script.js

--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -23,7 +23,7 @@
 						<a href="./index.html#contact">contact</a>
 					</li>
 					<li>
-						<a href="./login.html" class="active-nav">login</a>
+						<a href="./login.html" id="log-nav" class="active-nav">login</a>
 					</li>
 					<li>
 						<a href="#">
