--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -30,7 +30,7 @@
 						<a href="#contact">contact</a>
 					</li>
 					<li>
-						<a href="./login.html">login</a>
+						<a href="./login.html" id="log-nav">login</a>
 					</li>
 					<li>
 						<a href="#">
