Add autofocus attribute to add-photo button from modal in index.html

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -64,7 +64,7 @@
 							<i class="fa-solid fa-xmark"></i>
 						</button>
 						<h3 id="modalTitle1">Galerie photo</h3>
-						<button id="add-photo" class="modal-main-btn">Ajouter une photo</button>
+						<button id="add-photo" class="modal-main-btn" autofocus>Ajouter une photo</button>
 					</form>
 					<form method="dialog" id="modal2" class="hidden">
 						<button class="xmark">
