Add arrow-left button with back-btn class to index.html and style.css

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -67,6 +67,9 @@
 						<button id="add-photo" class="modal-main-btn" autofocus>Ajouter une photo</button>
 					</form>
 					<form method="dialog" id="modal2" class="hidden">
+						<button class="back-btn">
+							<i class="fa-solid fa-arrow-left fa-lg"></i>
+						</button>
 						<button class="xmark">
 							<i class="fa-solid fa-xmark"></i>
 						</button>
