Switch Valider button tag to input with submit type and add form-btn class to global form inputs in index.html, login.html and style.css

--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -41,7 +41,7 @@
 					<input type="email" name="email" id="email" class="details">
 					<label for="password">Mot de passe</label>
 					<input type="password" name="password" id="password" class="details">
-					<input type="submit" value="Se connecter">
+					<input type="submit" value="Se connecter" class="form-btn">
 				</form>
 				<p class="forgot">
 					<a href="#">Mot de passe oublié</a>
