--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -74,7 +74,9 @@
 							<i class="fa-solid fa-xmark"></i>
 						</button>
 						<h3 id="modalTitle2">Ajout photo</h3>
-						<button id="validate" class="modal-main-btn">Valider</button>
+						<div>
+						</div>
+						<input type="submit" value="Valider" id="validate" class="modal-main-btn">
 					</form>
 				</dialog>
 			</section>
@@ -88,7 +90,7 @@
 					<input type="email" name="email" id="email" class="details">
 					<label for="message">Message</label>
 					<textarea name="message" id="message" cols="30" rows="12"></textarea>
-					<input type="submit" value="Envoyer">
+					<input type="submit" value="Envoyer" class="form-btn">
 				</form>
 			</section>
 		</main>
