--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -76,7 +76,7 @@
 						<h3 id="modalTitle2">Ajout photo</h3>
 						<div>
 						</div>
-						<input type="submit" value="Valider" id="validate" class="modal-main-btn">
+						<input type="submit" value="Valider" id="validate" class="modal-main-btn inactive">
 					</form>
 				</dialog>
 			</section>
