--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -74,7 +74,13 @@
 							<i class="fa-solid fa-xmark"></i>
 						</button>
 						<h3 id="modalTitle2">Ajout photo</h3>
-						<div>
+						<div id="modal-block2" class="modal-block">
+							<label for="title">Titre</label>
+							<input type="text" name="title" id="title" class="details">
+							<label for="category">Catégorie</label>
+							<select name="category" id="category" class="details">
+								<option value="1">Lolilol</option>
+							</select>
 						</div>
 						<input type="submit" value="Valider" id="validate" class="modal-main-btn inactive">
 					</form>
@@ -89,7 +95,7 @@
 					<label for="email">E-mail</label>
 					<input type="email" name="email" id="email" class="details">
 					<label for="message">Message</label>
-					<textarea name="message" id="message" cols="30" rows="12"></textarea>
+					<textarea name="message" id="message" cols="30" rows="9"></textarea>
 					<input type="submit" value="Envoyer" class="form-btn">
 				</form>
 			</section>
