Add file-conditions class to add-block paragraph in index.html, remove alert messages from conditions in fileCheck function, replace them by updating text content and adding an alert class to paragraph and add a condition when opening the modal to reset text content and alert class in style.css and script.js

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -80,7 +80,7 @@
 								<figcaption>
 									<label for="upload" id="add-block-btn" tabindex="0">+ Ajouter photo</label>
 									<input type="file" name="upload" accept="image/jpeg, image/png" id="upload">
-									<p>jpg, png : 4mo max</p>
+									<p class="file-conditions">jpg, png : 4mo max</p>
 								</figcaption>
 							</figure>
 							<label for="title" class="details-label">Titre</label>
