Remove file-conditions paragraph and add alert paragraph to script.js, update conditions from fileCheck and modalEvents functions and set tags and style in index.html and style.css

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -80,14 +80,13 @@
 								<figcaption>
 									<label for="upload" id="add-block-btn" tabindex="0">+ Ajouter photo</label>
 									<input type="file" name="upload" accept="image/jpeg, image/png" id="upload">
-									<p class="file-conditions">jpg, png : 4mo max</p>
+									<p id="file-conditions">jpg, png : 4mo max</p>
 								</figcaption>
 							</figure>
 							<label for="title" class="details-label">Titre</label>
 							<input type="text" name="title" id="title" class="details">
 							<label for="category" class="details-label">Catégorie</label>
-							<select name="category" id="category" class="details">
-							</select>
+							<select name="category" id="category" class="details"></select>
 						</div>
 						<input type="submit" value="Valider" id="validate" class="modal-main-btn inactive">
 					</form>
