Add required attribute to email and password input from login-form in login.html

--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -38,9 +38,9 @@
 				<h2>Log In</h2>
 				<form action="#" method="post" id="login-form">
 					<label for="email">E-mail</label>
-					<input type="email" name="email" id="email" class="details">
+					<input type="email" name="email" id="email" class="details" required>
 					<label for="password">Mot de passe</label>
-					<input type="password" name="password" id="password" class="details">
+					<input type="password" name="password" id="password" class="details" required>
 					<input type="submit" value="Se connecter" class="form-btn">
 				</form>
 				<p class="forgot">
