Remove required attribute from file input in index.html, add condition to addEventListener method in worksAdd function to create alert message when addBlock has no preview, add keydown addEventListener to addTitle with preventDefault method on Enter key in modalEvents function and add keypress addEventListener to addCategory to focus validate button with Enter key in categoriesList function in script.js

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -79,7 +79,7 @@
 								<i class="fa-regular fa-image"></i>
 								<figcaption>
 									<label for="upload" id="add-block-btn" tabindex="0">+ Ajouter photo</label>
-									<input type="file" name="upload" accept="image/jpeg, image/png" id="upload" required>
+									<input type="file" name="upload" accept="image/jpeg, image/png" id="upload">
 									<p id="file-conditions">jpg, png : 4mo max</p>
 								</figcaption>
 							</figure>
