--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -58,7 +58,7 @@
 						modifier
 					</button>
 				</div>
-				<dialog aria-labelledby="modalTitle1, modalTitle2">
+				<dialog aria-label="Gestion de la galerie et ajout de photos">
 					<form method="dialog" id="modal1">
 						<button class="xmark">
 							<i class="fa-solid fa-xmark fa-lg"></i>
