--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -97,13 +97,13 @@
 			<section id="contact">
 				<h2>Contact</h2>
 				<p>Vous avez un projet ? Discutons-en !</p>
-				<form action="#" method="post">
+				<form action="#" method="post" id="contact-form">
 					<label for="name">Nom</label>
-					<input type="text" name="name" id="name" class="details">
+					<input type="text" name="name" id="name" class="details" required>
 					<label for="email">E-mail</label>
-					<input type="email" name="email" id="email" class="details">
+					<input type="email" name="email" id="email" class="details" required>
 					<label for="message">Message</label>
-					<textarea name="message" id="message" cols="30" rows="9"></textarea>
+					<textarea name="message" id="message" cols="30" rows="9" required></textarea>
 					<input type="submit" value="Envoyer" class="form-btn">
 				</form>
 			</section>
